Fix aspect ratio squishing

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ table {
 }
 
 #container {
-  width: 100%;
+  width: 500px;
   max-width: 500px;
 
   /* Use height instead of aspect-ratio for better mobile Safari support */
